<resources>
    <string name="app_name">NFT Asset</string>
    <string name="Button_Back">Back</string>
    <string name="Button_Next">Next</string>
    <string name="Button_Save">Save</string>
    <string name="Button_Exit">Exit</string>
    <string name="required_field">Required field.</string>
    <string name="not_valid_email">Not valid email.</string>
    <string name="not_valid_phone_number">Not valid phone number.</string>
    <string name="not_valid_height">Not valid height.</string>
    <string name="not_valid_weight">Not valid weight.</string>
    <string name="select_a_country">Select a country ...</string>
    <string name="passbase_title">Passbase KYC and ID Verification</string>
    <string name="start_your_verification_text">Please prepare one of the document type from the list above, and start your identity verification by clicking on the button below.</string>
</resources>