<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#add8e6"
    tools:context=".aDocumentData">



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100px"
        android:paddingTop="5dp"
        android:paddingBottom="0px"
        android:text="Required document types"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:textAlignment="textStart"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDocumentType"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Click to see list of documents..."
        android:textAlignment="center"
        android:background="@drawable/my_border_white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pnlMain"
        android:layout_weight="2.73"
        android:orientation="vertical"
        android:layout_marginTop="0px"
        android:weightSum="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginTop="56dp"
                android:src="@drawable/ic_logo"
                app:tint="@color/parabellum_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/main_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passbase_title"
                android:textColor="@color/passbase_blue"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.274" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/start_your_verification_text"
                android:textAlignment="center"
                android:textColor="@color/passbase_blue"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@id/main_text1"
                app:layout_constraintStart_toStartOf="@+id/main_text1"
                app:layout_constraintTop_toBottomOf="@+id/main_text1" />

            <com.passbase.passbase_sdk.PassbaseButton
                android:id="@+id/passbaseVerificationButton"
                android:layout_width="250dp"
                android:layout_height="56dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="336dp"
                app:backgroundColor="@android:color/white"
                app:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:background="@android:color/holo_green_light"
            android:weightSum="1.0">
            <TextView
                android:id="@+id/btnBack"

                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_width="0dip"
                android:paddingTop="40px"
                android:paddingBottom="40px"
                android:text="@string/Button_Back"
                android:textAlignment="center"
                android:layout_alignParentBottom="true"
                android:background="@android:color/holo_red_light"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/btnNext"

                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_width="0dip"
                android:paddingTop="40px"
                android:paddingBottom="40px"
                android:text="@string/Button_Exit"
                android:textAlignment="center"
                android:layout_alignParentBottom="true"
                android:background="@android:color/holo_blue_dark"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>





</LinearLayout>